# PC-pilot

./: .gitignore  CMakeLists.txt  README.md  build.sh  macros.cmake
Communication/: CMakeLists.txt  ConnectionOrientedSocket.h  InetAddress.h  SocketContext.h
Communication/windows/: CMakeLists.txt  UdpSocket.cpp  Wsa.cpp  Wsa.h  WsaInetAddress.cpp  WsaInetAddress.h  WsaInetSocket.cpp  WsaInetSocket.h  WsaSocket.cpp  WsaSocket.h
InputSimulator/: CMakeLists.txt  InputSimulator.h  WindowsInputSimulator.cpp  WindowsInputSimulator.h
Utils/: ApplicationError.h  CMakeLists.txt  InstanceLimited.h  main.cpp
client/: .gitignore
client/app/: build.gradle
code_gen/: .gitignore  constants.py  generate.py  messages.py
code_gen/templates/: constants.h.mako  constants.kt.mako  messages.h.mako  messages.kt.mako
code_gen/utils/: definitions.py  template_utils.py
server/: CMakeLists.txt  macros.cmake
server/Application/: Application.cpp  Application.h  CMakeLists.txt  InputProcessor.cpp  InputProcessor.h  main.cpp
server/BackgroundWorker/: CMakeLists.txt  ConnectionManager.cpp  ConnectionManager.h  Processor.cpp  Processor.h  Receiver.cpp  Receiver.h  Transmitter.cpp  Transmitter.h
server/Communication/: CMakeLists.txt  ConnectionlessSocket.h  InetAddress.h  Messages.h  SocketContext.h
server/Communication/windows/: CMakeLists.txt  InetAddress.cpp  UdpSocket.cpp  UdpSocket.h  Wsa.cpp  Wsa.h
server/InputSimulator/: CMakeLists.txt  InputSimulator.h  WindowsInputSimulator.cpp
server/InputSimulator/windows/: CMakeLists.txt  (+2 more)
server/Utils/: ApplicationError.h  ArgumentParser.h  BlockingQueue.h  CMakeLists.txt  Constants.h  InterruptibleThread.h  Logger.cpp  Logger.h  main.cpp
(+40 files in other folders)
